{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 27,
  "lineage": "b95b39bd-1886-b164-f886-c7cbcb35cb9b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sailorec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-024c319d5d14b463e",
            "arn": "arn:aws:ec2:ap-south-1:227218640239:instance/i-0bf48ef4185e3dca4",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bf48ef4185e3dca4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sailorkp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d0c0b0ef467d05f9",
            "private_dns": "ip-10-0-1-243.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.243",
            "public_ip": "65.0.81.245",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ac6f71b6337bee50",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-091ce1906cbb0ae76",
            "tags": {
              "Name": "sailorec2"
            },
            "tags_all": {
              "Name": "sailorec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-087d20f34274ea2ac"
            ]
          },
          "dependencies": [
            "aws_key_pair.sailorkp",
            "aws_security_group.sailorpubsg",
            "aws_subnet.sailorpubsn",
            "aws_vpc.sailorvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sailorig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:227218640239:internet-gateway/igw-0c7648f4913a51957",
            "id": "igw-0c7648f4913a51957",
            "owner_id": "227218640239",
            "tags": {
              "Name": "sailorig"
            },
            "tags_all": {
              "Name": "sailorig"
            },
            "vpc_id": "vpc-0cdda1204de542071"
          },
          "dependencies": [
            "aws_vpc.sailorvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sailorigrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:227218640239:route-table/rtb-0e960a6cfa6b6b35d",
            "id": "rtb-0e960a6cfa6b6b35d",
            "owner_id": "227218640239",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c7648f4913a51957",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cdda1204de542071"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sailorig",
            "aws_vpc.sailorvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sailorigrtassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e500b9852349608",
            "route_table_id": "rtb-0e960a6cfa6b6b35d",
            "subnet_id": "subnet-091ce1906cbb0ae76"
          },
          "dependencies": [
            "aws_internet_gateway.sailorig",
            "aws_route_table.sailorigrt",
            "aws_subnet.sailorpubsn",
            "aws_vpc.sailorvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sailorpubsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:227218640239:security-group/sg-087d20f34274ea2ac",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-087d20f34274ea2ac",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20221104172246980300000001",
            "name_prefix": "terraform-",
            "owner_id": "227218640239",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cdda1204de542071"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sailorvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sailorpubsn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:227218640239:subnet/subnet-091ce1906cbb0ae76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091ce1906cbb0ae76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "227218640239",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sailorpubsn"
            },
            "tags_all": {
              "Name": "sailorpubsn"
            },
            "vpc_id": "vpc-0cdda1204de542071"
          },
          "dependencies": [
            "aws_vpc.sailorvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sailorvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:227218640239:vpc/vpc-0cdda1204de542071",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0138cbbf53cf48a78",
            "default_route_table_id": "rtb-05e2373966e3be99f",
            "default_security_group_id": "sg-03fd1bd2ceba28f00",
            "dhcp_options_id": "dopt-071ca8a68c61ad0a2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cdda1204de542071",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05e2373966e3be99f",
            "owner_id": "227218640239",
            "tags": {
              "Name": "sailorvpc"
            },
            "tags_all": {
              "Name": "sailorvpc"
            }
          }
        }
      ]
    }
  ]
}